--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -20,6 +20,7 @@ https://templatemo.com/tm-578-first-portfolio
   --border-color:                 #e9eaeb;
   --featured-border-color:        #727aab;
 
+  /* --body-font-family:             'Poppins'; */
   --body-font-family:             'DM Sans', sans-serif;
 
   --h1-font-size:                 62px;
