--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -636,7 +636,7 @@ strong {
 
 .services-thumb {
   background: var(--white-color);
-  border: 2px solid transparent;
+  border: 2px solid #dfdfdf;
   border-radius: var(--border-radius-medium);
   position: relative;
   overflow: hidden;
